Inserimento esperienza comprata nella pagina utente

--- a/user.html
+++ b/user.html
@@ -178,7 +178,7 @@
           </tr>
           <tr>
             <td><strong>Email:</strong></td>
-            <td><em>admin@shroomind.com</em></td>
+            <td><em>user@email.com</em></td>
           </tr>
         </table>
 
@@ -186,7 +186,21 @@
           <div class="panel panel-primary">
             <div class="panel-heading">Lista delle esperienze prenotate</div>
             <div class="list-group">
-              <div class="list-group-item"><a href="#esperienza">Esperienza 1</a></div>
+              <div class="list-group-item"><a href="esperienza_logged.html"><div class="jumbotron">
+                <div class="row">
+                    <div class="col-md-2">
+                      <img class="media-object" width="150" height="130" src="img/img1.jpg">
+                    </div>
+                    <div class="col-md-8">
+                        <h2>Missione circumlunare</h2>
+                    </div>
+                    <div class="col-md-2">
+                            <br>
+                            <h4>Valore:</h4>
+                            <h4 class="text-danger">USD 5.000.000,00</h4>
+                    </div>
+                </div></a>
+              </div>
             </div>
           </div>
         </div>
