--- a/mappa.html
+++ b/mappa.html
@@ -94,7 +94,7 @@
             </li>
             <!-- Partners -->
             <li>
-              <a href="partners.html">Partners</a>
+              <a href="#about">Partners</a>
             </li>
             <!-- Chi siamo -->
             <li class="dropdown">
@@ -103,7 +103,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="vision.html">Vision</a>
+                  <a href="#">Vision</a>
                 </li>
                 <li>
                   <a href="#">Storia</a>
@@ -116,9 +116,9 @@
                 </li>
               </ul>
             </li>
-            <!-- Contatti -->
+            <!-- Contattaci -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
@@ -126,15 +126,18 @@
                   <a href="scrivici.html">Scrivici</a>
                 </li>
                 <li>
-                  <a href="mappa.html">Dove trovarci</a>
+                  <a href="#">Dove trovarci</a>
                 </li>
               </ul>
             </li>
+            <!-- Ricerca -->
+            <li>
+              <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
+            </li>
             <!-- Login form -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                <span class="hidden-sm hidden-md hidden-lg"> Login</span>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
+                <span class="caret"></span>
               </a>
               <ul id="login-dp" class="dropdown-menu">
                 <li>
@@ -167,116 +170,34 @@
                 </li>
               </ul>
             </li>
-            <!-- Ricerca -->
-            <li>
-              <a href="ricercaglobale.html">
-                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                <span class="hidden-sm hidden-md hidden-lg"> Cerca nel sito</span>
-              </a>
-            </li>
           </ul>
         </div>
       </div>
     </nav>
+  
+    <main class="container">
 
-		<main>
-			<section id="myCarousel" class="carousel slide" data-ride="carousel">
-				<!-- Indicators -->
-				<ol class="carousel-indicators">
-					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-					<li data-target="#myCarousel" data-slide-to="1"></li>
-					<li data-target="#myCarousel" data-slide-to="2"></li>
-				</ol>
-			
-				<!-- Wrapper for slides -->
-				<div class="carousel-inner" role="listbox">
-					<div class="item active">
-						<img src="img/img1.jpg" alt="...">
-						<div class="carousel-caption">
-							<!-- niente -->
-						</div>
-					</div>
-					<div class="item">
-						<img src="img/img2.jpg" alt="...">
-						<div class="carousel-caption">
-							<!-- niente -->
-						</div>
-					</div>
-					<div class="item">
-						<img src="img/img3.jpg" alt="...">
-						<div class="carousel-caption">
-							<!-- niente -->
-						</div>
-					</div>
-				</div>
-			
-				<div class="carousel-caption">
-					<p><a class="btn btn-lg btn-primary" href="#" role="button">Vai alle esperienze</a></p>
-				</div>
+      <ol class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li class="active">Dove trovarci</li>
+      </ol>
 
-				<!-- Controls -->
-				<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-					<span class="sr-only">Precedente</span>
-				</a>
-				<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-					<span class="sr-only">Successivo</span>
-				</a>
-			</section>
+      <div class="panel panel-default">
+        <header class="panel-heading well">
+          <h1>
+            Dove trovarci?
+          </h1>
+          <p class="lead">Niente di più facile.</p>
+        </header>
 
-      <hr>
+        <section class="panel-body">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9192.048856377149!2d-87.63926804638194!3d41.89624864861953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x391a5a350090350e!2sClark%2FDivision!5e0!3m2!1sit!2sit!4v1515862348157" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </section>
+      </div>
 
-      <section class="container">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-        </div>
-      </section>
-			
-      <hr>
-      
-      <section class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h1>News Recenti</h1>
-              </div>
+    </main>
 
-              <div class="panel-body">
-                <h2>Subheading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                <h2>Subheading</h2>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-                <h2>Subheading</h2>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h1>Novità dal blog</h1>
-              </div>
-
-              <div class="panel-body">
-                <h2>Subheading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                <h2>Subheading</h2>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-                <h2>Subheading</h2>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-		</main>
+		
 
 		<footer class="footer">
 			<nav class="navbar-inverse">
