--- a/blog.html
+++ b/blog.html
@@ -182,23 +182,22 @@
 			</ol>
 
       <div class="panel panel-default">
-        <div class="panel-heading">
-          <header class="container">
-            <h1>Space Shroom Blog</h1>
-            <p class="lead">Il Blog ufficiale riguardo le ultime curiosità dallo spazio.</p>
-          </header>
-        </div>
-
-        <nav class="panel-body" aria-label="Page navigation">
-          <ul class="pagination">
-            <li class="active"><a href="#" >1</a></li>
-            <li><a href="blog2.html">2</a></li>
-          </ul>
-        </nav>
+        <header class="panel-heading">
+          <h1>Space Shroom Blog</h1>
+          <p class="lead">Il Blog ufficiale riguardo le ultime curiosità dallo spazio.</p>
+        </header>
 
         <div class="panel-body">
+          <nav aria-label="Page navigation">
+            <ul class="pagination">
+              <li class="active"><a href="#" >1</a></li>
+              <li><a href="blog2.html">2</a></li>
+            </ul>
+          </nav>
+
           <div class="row">
             <section class="col-sm-9">
+
               <article class="panel panel-default">
                 <header class="panel-heading">
                   <h2>
@@ -231,6 +230,13 @@
                   </p>
                 </div>
               </article>
+
+              <nav>
+                <ul class="pager">
+                  <li><a href="blog2.html">Prossima pagina</a></li>
+                </ul>
+              </nav>
+
             </section>
 
             <aside class="col-sm-3">
@@ -255,15 +261,9 @@
                 </div>
               </div>
             </aside>
-
           </div>
         </div>
         
-        <nav class="panel-footer">
-          <ul class="pager">
-            <li><a href="blog2.html">Prossima pagina</a></li>
-          </ul>
-        </nav>
       </div>
     </main>
     
