--- a/esperienze.html
+++ b/esperienze.html
@@ -181,7 +181,7 @@
 				<li class="active">Esperienze</li>
 			</ol>
 
-			<div class="panel panel-default marketing">
+			<div class="panel panel-default">
 				<header class="panel-heading well">
 					<h1>Le nostre esperienze</h1>
 					<p class="lead">Shroom Space ti offre dei momenti indimenticabili!</p>
