--- a/partners.html
+++ b/partners.html
@@ -183,7 +183,7 @@
       </ol>
 
       <div class="panel panel-default">
-        <header class="panel-heading well">
+        <header class="panel-heading">
           <h1>
             Scopri i nostri partners.
           </h1>
