--- a/ricercaglobale.html
+++ b/ricercaglobale.html
@@ -18,216 +18,215 @@
 	</head>
 
 	<body>
-
-    <header>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-            aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Shroom Space Ind.</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <!-- vuoto, è tutto a destra -->
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <!-- Esperienze -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#">Missione circumlunare</a>
-                  </li>
-                  <li>
-                    <a href="#">Volo a gravità zero</a>
-                  </li>
-                  <li>
-                    <a href="#">Addestramento da astronauta</a>
-                  </li>
-                  <li>
-                    <a href="#">Visita la stazione spaziale</a>
-                  </li>
-                  <li>
-                    <a href="#">Assisti ad un lancio spaziale</a>
-                  </li>
-                  <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Altre esperienze</li>
-                  <li>
-                    <a href="#">Assisti ad un lancio spaziale</a>
-                  </li>
-                  <li>
-                    <a href="#">Scopri le nostre tecnologie</a>
-                  </li>
-                  <li>
-                    <a href="#">Sicurezza</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- News ed Eventi -->
-              <li>
-                <a href="#about">News ed Eventi</a>
-              </li>
-              <!-- Blog -->
-              <li>
-                <a href="blog.html">Blog</a>
-              </li>
-              <!-- Multimedia -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#">Foto gallery</a>
-                  </li>
-                  <li>
-                    <a href="#">Video gallery</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- Partners -->
-              <li>
-                <a href="#about">Partners</a>
-              </li>
-              <!-- Chi siamo -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chi siamo
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#">Vision</a>
-                  </li>
-                  <li>
-                    <a href="#">Storia</a>
-                  </li>
-                  <li>
-                    <a href="#">Il Team</a>
-                  </li>
-                  <li>
-                    <a href="#">Opportunità lavorative</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- Contattaci -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#">Scrivici</a>
-                  </li>
-                  <li>
-                    <a href="#">Dove trovarci</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- Ricerca -->
-              <li>
-                <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
-              </li>
-              <!-- Login form -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
-                  <span class="caret"></span>
-                </a>
-                <ul id="login-dp" class="dropdown-menu">
-                  <li>
-                    <div class="row">
-                      <form class="navbar-form" role="form" method="get" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
-                        <div class="form-group">
-                          <label class="sr-only" for="loginEmail">Indirizzo email</label>
-                          <input type="email" class="form-control" id="loginEmail" placeholder="Indirizzo email" required>
-                        </div>
-                        <div class="form-group">
-                          <label class="sr-only" for="loginPassword">Password</label>
-                          <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
-                          <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
-                        </div>
-                        <div>
-                          <label class="sr-only" for="loginSubmit">Indirizzo email</label>
-                          <input type="submit" class="btn btn-primary btn-block" id="loginSubmit" value="Vai!">
-                        </div>
-                        <hr>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox"> Resta collegato
-                          </label>
-                        </div>
-                      </form>
-                    </div>
-                    <div class="bottom text-center">
-                      Nuovo? <a href="registrazione.html"><b>Registrati!</b></a>
-                    </div>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+          aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Shroom Space Ind.</a>
         </div>
-      </nav>
-    </header>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <!-- vuoto, è tutto a destra -->
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <!-- Esperienze -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Missione circumlunare</a>
+                </li>
+                <li>
+                  <a href="#">Volo a gravità zero</a>
+                </li>
+                <li>
+                  <a href="#">Addestramento da astronauta</a>
+                </li>
+                <li>
+                  <a href="#">Visita la stazione spaziale</a>
+                </li>
+                <li>
+                  <a href="#">Assisti ad un lancio spaziale</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Altre esperienze</li>
+                <li>
+                  <a href="#">Assisti ad un lancio spaziale</a>
+                </li>
+                <li>
+                  <a href="#">Scopri le nostre tecnologie</a>
+                </li>
+                <li>
+                  <a href="#">Sicurezza</a>
+                </li>
+              </ul>
+            </li>
+            <!-- News ed Eventi -->
+            <li>
+              <a href="#about">News ed Eventi</a>
+            </li>
+            <!-- Blog -->
+            <li>
+              <a href="blog.html">Blog</a>
+            </li>
+            <!-- Multimedia -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Foto gallery</a>
+                </li>
+                <li>
+                  <a href="#">Video gallery</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Partners -->
+            <li>
+              <a href="#about">Partners</a>
+            </li>
+            <!-- Chi siamo -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chi siamo
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Vision</a>
+                </li>
+                <li>
+                  <a href="#">Storia</a>
+                </li>
+                <li>
+                  <a href="#">Il Team</a>
+                </li>
+                <li>
+                  <a href="#">Opportunità lavorative</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Contattaci -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Scrivici</a>
+                </li>
+                <li>
+                  <a href="#">Dove trovarci</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Ricerca -->
+            <li>
+              <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
+            </li>
+            <!-- Login form -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
+                <span class="caret"></span>
+              </a>
+              <ul id="login-dp" class="dropdown-menu">
+                <li>
+                  <div class="row">
+                    <form class="navbar-form" role="form" method="get" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
+                      <div class="form-group">
+                        <label class="sr-only" for="loginEmail">Indirizzo email</label>
+                        <input type="email" class="form-control" id="loginEmail" placeholder="Indirizzo email" required>
+                      </div>
+                      <div class="form-group">
+                        <label class="sr-only" for="loginPassword">Password</label>
+                        <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
+                        <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
+                      </div>
+                      <div>
+                        <label class="sr-only" for="loginSubmit">Indirizzo email</label>
+                        <input type="submit" class="btn btn-primary btn-block" id="loginSubmit" value="Vai!">
+                      </div>
+                      <hr>
+                      <div class="checkbox">
+                        <label>
+                          <input type="checkbox"> Resta collegato
+                        </label>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="bottom text-center">
+                    Nuovo? <a href="registrazione.html"><b>Registrati!</b></a>
+                  </div>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-		<section>
-					<div class="container">
+		<main class="container">
 
-									<div class="starter-template">
-											<ol class="breadcrumb">
-													<li><a href="index.html">Home</a></li>
-							<li class="active">Ricerca</li>
-											</ol>
-											<h2>Cerchi qualcosa?</h2>
-											<p class="lead">Vediamo se possiamo aiutarti.</p><br>
-											<div class="jumbotron">
-													<div class="row">
-															<div class="col-md-6">
-																	<p>Che cosa ti interessa?</p>
-																	<div class="checkbox">
-																			<label><input type="checkbox" value="" ch>Esperienze</label>
-																	</div>
-																	<div class="checkbox">
-																			<label><input type="checkbox" value="">News</label>
-																	</div>
-																	<div class="checkbox">
-																					<label><input type="checkbox" value="" checked>Blog</label>
-																	</div>
-																	<div class="checkbox">
-																			<label><input type="checkbox" value="" checked>Foto</label>
-																	</div>
-																	<div class="checkbox">
-																			<label><input type="checkbox" value="">Video</label>
-																	</div>
-															</div>
-															<div class="col-md-6">
-																			
-																			<div class="form-group">
-																							<label for="usr">Qualcosa di specifico?</label>
-																							<input type="text" class="form-control" id="usr" placeholder="Scrivi cosa vorresti trovare" value="Spaziale">
-																						</div>
-																			<div class="radio">
-																					<label><input type="radio" name="optradio" checked>Keyword</label>
-																			</div>
-																			<div class="radio">
-																					<label><input type="radio" name="optradio">Tag</label>
-																			</div>
-																			<div class="form-group">
-																					<a href="searched.html"><input type="button" class="btn btn-primary btn-md" value="Vai!"></button></a>
-																			</div>
-															</div>
-													</div>
-											</div>
-									</div>
-					</div><!-- /.container -->
-		</section>
+      <ol class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li class="active">Ricerca</li>
+      </ol>
+
+      <div class="panel panel-default">
+        <header class="panel-heading">
+          <h1>Cerchi qualcosa?</h1>
+          <p class="lead">Vediamo se possiamo aiutarti.</p>
+        </header>
+        <section class="panel-body">
+          <div class="jumbotron">
+            <div class="row">
+              <div class="col-md-6">
+                <p>Che cosa ti interessa?</p>
+                <div class="checkbox">
+                  <label><input type="checkbox" value="" ch>Esperienze</label>
+                </div>
+                <div class="checkbox">
+                  <label><input type="checkbox" value="">News</label>
+                </div>
+                <div class="checkbox">
+                  <label><input type="checkbox" value="" checked>Blog</label>
+                </div>
+                <div class="checkbox">
+                  <label><input type="checkbox" value="" checked>Foto</label>
+                </div>
+                <div class="checkbox">
+                  <label><input type="checkbox" value="">Video</label>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="usr">Qualcosa di specifico?</label>
+                  <input type="text" class="form-control" id="usr" placeholder="Scrivi cosa vorresti trovare" value="Spaziale">
+                </div>
+                <div class="radio">
+                  <label><input type="radio" name="optradio" checked>Keyword</label>
+                </div>
+                <div class="radio">
+                  <label><input type="radio" name="optradio">Tag</label>
+                </div>
+                <div class="form-group">
+                  <a href="searched.html"><input type="button" class="btn btn-primary btn-md" value="Vai!"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+		</main>
 
 		<footer class="footer">
 			<nav class="navbar-inverse">
