--- a/user.html
+++ b/user.html
@@ -186,20 +186,22 @@
           <div class="panel panel-primary">
             <div class="panel-heading">Lista delle esperienze prenotate</div>
             <div class="list-group">
-              <div class="list-group-item"><a href="esperienza_logged.html"><div class="jumbotron">
-                <div class="row">
-                    <div class="col-md-2">
-                      <img class="media-object" width="150" height="130" src="img/img1.jpg">
+              <div class="list-group-item">
+                <a href="esperienza_logged.html">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <img class="media-object img-rounded img-responsive" src="img/img1.jpg">
                     </div>
-                    <div class="col-md-8">
-                        <h2>Missione circumlunare</h2>
+                    <div class="col-sm-6">
+                      <h2>Missione circumlunare</h2>
+                      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint, animi a! Quam officia a optio ducimus repellat quae, in ratione officiis exercitationem? Beatae perferendis quidem sint atque esse distinctio. Dignissimos.</p>
                     </div>
-                    <div class="col-md-2">
-                            <br>
-                            <h4>Valore:</h4>
-                            <h4 class="text-danger">USD 5.000.000,00</h4>
+                    <div class="col-sm-3">
+                      <h3>Valore:</h3>
+                      <h4 class="text-danger">USD 5.000.000,00</h4>
                     </div>
-                </div></a>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
