nov, dic, gen corretti

--- a/gen.html
+++ b/gen.html
@@ -172,57 +172,64 @@
         </div>
       </div>
     </nav>
-    
-    <header class="container">
+
+    <main class="container">
       <ol class="breadcrumb">
 				<li><a href="index.html">Home</a></li>
 				<li class="active">Blog</li>
 			</ol>
-      <h1>Space Shroom Blog</h1>
-      <p class="lead">Il Blog ufficiale riguardo le ultime curiosità dallo spazio.</p>
-    </header>
 
-    <main class="container">
-      <div class="row">
+      <div class="panel panel-default">
+        <header class="panel-heading">
+          <h1>Space Shroom Blog</h1>
+          <p class="lead">Il Blog ufficiale riguardo le ultime curiosità dallo spazio.</p>
+        </header>
 
-        <section class="col-sm-9">
-          <div class="panel panel-default list-group">
-            <header class="panel-heading">
-              <h1>Articoli di Gennaio 2018</h1>
-            </header>
-        
-            <article class="list-group-item">
-              <h2>
-                <img src="img/spaceodissey.jpg" width="100" height="50" alt="trumpet"/>
-                <strong>2001: odissea nel fungo</strong>
-              </h2>
-              <hr>
-              <p>Gennaio 1, 2017 da <a href="#">Marco</a></p>
-              <p>2001: Odissea nello spazio (2001: A Space Odyssey) è un film di Stanley Kubrick del 1968, basato su un soggetto di Arthur C. Clarke, il quale ha poi tratto dalla sceneggiatura un romanzo dal titolo omonimo. Benché molti ritengano la pellicola ispirata al racconto di Clarke La sentinella, lo stesso autore[3] ha affermato che "La sentinella assomiglia a 2001 come una ghianda assomiglia a una quercia adulta". La categoria "film di fantascienza" spesso attribuita all'opera di Kubrick non rappresenta in realtà l'intima natura del film, che, pur ambientato nel futuro, tocca problematiche antichissime relativa all'identità della natura umana, al suo destino, al ruolo della conoscenza e della tecnica. Un'umanità alla ricerca di sé, diversa dal resto della natura, definita dal simbolo centrale di un parallelepipedo, razionale, verticale, misterioso, sovrastato da una luce speciale. Una ricerca che, condotta con il prevalente obbiettivo del domino tecnico, trova invece alla fine l'uomo di fronte al suo limite irrisolto, ancora sovrastato dall'incombente figura geometrica, mai veramente risolta.</p>   
-              <h6>Fonte: wikipedia.it</h6>
-            </article>
+        <div class="panel-body">
+          <header>
+            <h2>Articoli di Gennaio 2018</h2>
+          </header>
 
-            <nav class="panel-footer">
-              <ul class="pager">
-                <li><a href="blog.html">Torna al blog</a></li>
-              </ul>
-            </nav>
+          <div class="row">
+            <section class="col-sm-9">
+
+              <article class="panel panel-default">
+                <header class="panel-heading">
+                  <h2>
+                    <img src="img/spaceodissey.jpg" width="100" height="50" alt="trumpet"/>
+                    <strong>2001: odissea nel fungo</strong>
+                  </h2>
+                </header>
+                <div class="panel-body">
+                  <p>Gennaio 1, 2017 da <a href="#">Marco</a></p>
+                  <p>2001: Odissea nello spazio (2001: A Space Odyssey) è un film di Stanley Kubrick del 1968, basato su un soggetto di Arthur C. Clarke, il quale ha poi tratto dalla sceneggiatura un romanzo dal titolo omonimo. Benché molti ritengano la pellicola ispirata al racconto di Clarke La sentinella, lo stesso autore[3] ha affermato che "La sentinella assomiglia a 2001 come una ghianda assomiglia a una quercia adulta". La categoria "film di fantascienza" spesso attribuita all'opera di Kubrick non rappresenta in realtà l'intima natura del film, che, pur ambientato nel futuro, tocca problematiche antichissime relativa all'identità della natura umana, al suo destino, al ruolo della conoscenza e della tecnica. Un'umanità alla ricerca di sé, diversa dal resto della natura, definita dal simbolo centrale di un parallelepipedo, razionale, verticale, misterioso, sovrastato da una luce speciale. Una ricerca che, condotta con il prevalente obbiettivo del domino tecnico, trova invece alla fine l'uomo di fronte al suo limite irrisolto, ancora sovrastato dall'incombente figura geometrica, mai veramente risolta.</p>   
+                  <h6>Fonte: wikipedia.it</h6>
+                </div>
+              </article>
+
+              <nav>
+                <ul class="pager">
+                  <li><a href="blog.html">Torna al blog</a></li>
+                </ul>
+              </nav>
+
+            </section>
+
+            <aside class="col-sm-3">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4>Archivio</h4>
+                </div>
+                <div class="list-group">
+                  <a class="list-group-item" href="gen.html">Gennaio 2018</a>
+                  <a class="list-group-item" href="dic.html">Dicembre 2017</a>
+                  <a class="list-group-item" href="nov.html">Novembre 2017</a>
+                </div>
+              </div>
+            </aside>
+
           </div>
-        </section>
-
-        <aside class="col-sm-3">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h4>Archivio</h4>
-            </div>
-            <div class="list-group">
-              <a class="list-group-item" href="gen.html">Gennaio 2018</a>
-              <a class="list-group-item" href="dic.html">Dicembre 2017</a>
-              <a class="list-group-item" href="nov.html">Novembre 2017</a>
-            </div>
-          </div>
-        </aside>
-
+        </div>
       </div>
     </main>
 
