--- a/opportunita.html
+++ b/opportunita.html
@@ -191,77 +191,63 @@
         </header>
 
         <section class="panel-body">
-            <div class="panel-footer">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">Pilota di space shuttle</div>
-                    <a href="scrivici.html">
-                        <div class="list-group">
-                            <div class="list-group-item">
-                                <div class="row">
-                                    <div class="col-sm-3">
-                                        <img class="media-object img-rounded img-responsive" src="img/job1.jpg">
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <h3>Requisiti:</h3>
-                                        <h4 class="text-info">Patente di space shuttle</h4>
-                                        <h4 class="text-info">4000 ore di volo all'attivo</h4>
-                                        <h4 class="text-info">Navicella spaziale</h4>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3>Pilota di space shuttle</h3>
             </div>
-
-            <div class="panel-footer">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">Meccanico aerospaziale</div>
-                    <a href="scrivici.html">
-                        <div class="list-group">
-                            <div class="list-group-item">
-                                <div class="row">
-                                    <div class="col-sm-3">
-                                        <img class="media-object img-rounded img-responsive" src="img/job2.png">
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <h3>Requisiti:</h3>
-                                        <h4 class="text-info">Laurea in ingegneria aerospaziale</h4>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
+            <a href="scrivici.html">
+              <div class="row">
+                <div class="col-sm-4">
+                  <img class="media-object img-responsive" src="img/job1.jpg">
                 </div>
+                <div class="col-sm-8">
+                  <h3>Requisiti:</h3>
+                  <p class="text-info">Patente di space shuttle</p>
+                  <p class="text-info">4000 ore di volo all'attivo</p>
+                  <p class="text-info">Navicella spaziale</p>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+             <h3>Meccanico aerospaziale</h3>
             </div>
-
-            <div class="panel-footer">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">Stormtrooper</div>
-                        <a href="scrivici.html">
-                            <div class="list-group">
-                                <div class="list-group-item">
-                                    <div class="row">
-                                        <div class="col-sm-3">
-                                            <img class="media-object img-rounded img-responsive" src="img/job3.jpg">
-                                        </div>
-                                        <div class="col-sm-3">
-                                            <h3>Requisiti:</h3>
-                                            <h4 class="text-info">Fedeltà all'Imperatore</h4>
-                                            <h4 class="text-info">Scarse capacità di mira</h4>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+            <a href="scrivici.html">
+              <div class="row">
+                <div class="col-sm-4">
+                  <img class="media-object img-responsive" src="img/job2.png">
                 </div>
+                <div class="col-sm-8">
+                  <h3>Requisiti:</h3>
+                  <p class="text-info">Laurea in ingegneria aerospaziale</p>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3>Stormtrooper</h3>
+            </div>
+            <a href="scrivici.html">
+              <div class="row">
+                <div class="col-sm-4">
+                  <img class="media-object img-responsive" src="img/job3.jpg">
+                </div>
+                <div class="col-sm-8">
+                  <h3>Requisiti:</h3>
+                  <p class="text-info">Fedeltà all'Imperatore</p>
+                  <p class="text-info">Scarse capacità di mira</p>
+                </div>
+              </div>
+            </a>
+          </div>
         </section>
       </div>
 
     </main>
-
-		
 
 		<footer class="footer">
 			<nav class="navbar-inverse">
