--- a/user.html
+++ b/user.html
@@ -182,7 +182,7 @@
           </tr>
         </table>
 
-        <div class="panel-footer">
+        <div class="panel-body">
           <div class="panel panel-primary">
             <div class="panel-heading">Lista delle esperienze prenotate</div>
             <div class="list-group">
@@ -194,7 +194,9 @@
                     </div>
                     <div class="col-sm-6">
                       <h2>Missione circumlunare</h2>
-                      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint, animi a! Quam officia a optio ducimus repellat quae, in ratione officiis exercitationem? Beatae perferendis quidem sint atque esse distinctio. Dignissimos.</p>
+                      <a href="esperienza.html">
+                        <input type="button" class="btn btn-info btn-md" value="Dettagli esperienza">
+                      </a>
                     </div>
                     <div class="col-sm-3">
                       <h3>Valore:</h3>
