--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Missione circumlunare</a>
+                  <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
                   <a href="#">Volo a gravità zero</a>
@@ -179,7 +179,10 @@
       </div>
     </nav>
 
-		<main>
+		<main class="container">
+
+      <hr>
+
 			<section id="myCarousel" class="carousel slide" data-ride="carousel">
 				<!-- Indicators -->
 				<ol class="carousel-indicators">
@@ -192,21 +195,12 @@
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
 						<img src="img/img1.jpg" alt="...">
-						<div class="carousel-caption">
-							<!-- niente -->
-						</div>
 					</div>
 					<div class="item">
 						<img src="img/img2.jpg" alt="...">
-						<div class="carousel-caption">
-							<!-- niente -->
-						</div>
 					</div>
 					<div class="item">
 						<img src="img/img3.jpg" alt="...">
-						<div class="carousel-caption">
-							<!-- niente -->
-						</div>
 					</div>
 				</div>
 			
@@ -227,7 +221,7 @@
 
       <hr>
 
-      <section class="container">
+      <section>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
         </div>
@@ -243,15 +237,19 @@
                 <h1>News Recenti</h1>
               </div>
 
-              <div class="panel-body">
-                <h2>Subheading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                <h2>Subheading</h2>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-                <h2>Subheading</h2>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <div class="list-group">
+                <div class="list-group-item">
+                  <h2>Subheading</h2>
+                  <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+                </div>
+                <div class="list-group-item">
+                  <h2>Subheading</h2>
+                  <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+                </div>
+                <div class="list-group-item">
+                  <h2>Subheading</h2>
+                  <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                </div>
               </div>
             </div>
           </div>
@@ -262,15 +260,19 @@
                 <h1>Novità dal blog</h1>
               </div>
 
-              <div class="panel-body">
-                <h2>Subheading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                <h2>Subheading</h2>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-                <h2>Subheading</h2>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <div class="list-group">
+                <div class="list-group-item">
+                  <h2>Subheading</h2>
+                  <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+                </div>
+                <div class="list-group-item">
+                  <h2>Subheading</h2>
+                  <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+                </div>
+                <div class="list-group-item">
+                  <h2>Subheading</h2>
+                  <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                </div>
               </div>
             </div>
           </div>
