--- a/user.html
+++ b/user.html
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="indexlogged.html">Shroom Space Ind.</a>
+          <a class="navbar-brand" href="#">Shroom Space Ind.</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -43,7 +43,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Missione circumlunare</a>
+                  <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
                   <a href="#">Volo a gravità zero</a>
@@ -85,7 +85,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Foto gallery</a>
+                  <a href="foto.html">Foto gallery</a>
                 </li>
                 <li>
                   <a href="#">Video gallery</a>
@@ -94,7 +94,7 @@
             </li>
             <!-- Partners -->
             <li>
-              <a href="#about">Partners</a>
+              <a href="partners.html">Partners</a>
             </li>
             <!-- Chi siamo -->
             <li class="dropdown">
@@ -103,50 +103,76 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Vision</a>
+                  <a href="vision.html">Vision</a>
                 </li>
                 <li>
-                  <a href="#">Storia</a>
+                  <a href="storia.html">Storia</a>
                 </li>
                 <li>
-                  <a href="#">Il Team</a>
+                  <a href="team.html">Il Team</a>
                 </li>
                 <li>
-                  <a href="#">Opportunità lavorative</a>
+                  <a href="opportunita.html">Opportunità lavorative</a>
                 </li>
               </ul>
             </li>
-            <!-- Contattaci -->
+            <!-- Contatti -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Scrivici</a>
+                  <a href="scrivici.html">Scrivici</a>
                 </li>
                 <li>
-                  <a href="#">Dove trovarci</a>
+                  <a href="mappa.html">Dove trovarci</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Login form -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                <span class="hidden-sm hidden-md hidden-lg"> Login</span>
+              </a>
+              <ul id="login-dp" class="dropdown-menu">
+                <li>
+                  <div class="row">
+                    <form class="navbar-form" role="form" method="get" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
+                      <div class="form-group">
+                        <label class="sr-only" for="loginEmail">Indirizzo email</label>
+                        <input type="email" class="form-control" id="loginEmail" placeholder="Indirizzo email" required>
+                      </div>
+                      <div class="form-group">
+                        <label class="sr-only" for="loginPassword">Password</label>
+                        <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
+                        <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
+                      </div>
+                      <div>
+                        <label class="sr-only" for="loginSubmit">Indirizzo email</label>
+                        <input type="submit" class="btn btn-primary btn-block" id="loginSubmit" value="Vai!">
+                      </div>
+                      <hr>
+                      <div class="checkbox">
+                        <label>
+                          <input type="checkbox"> Resta collegato
+                        </label>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="bottom text-center">
+                    Nuovo? <a href="registrazione.html"><b>Registrati!</b></a>
+                  </div>
                 </li>
               </ul>
             </li>
             <!-- Ricerca -->
             <li>
-              <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
-            </li>
-            <!-- Profilo utente -->
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Benvenuto, user!
-                <span class="caret"></span>
+              <a href="ricercaglobale.html">
+                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                <span class="hidden-sm hidden-md hidden-lg"> Cerca nel sito</span>
               </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a href="user.html">Profilo utente</a>
-                </li>
-                <li>
-                  <a href=".">Logout</a>
-                </li>
-              </ul>
             </li>
           </ul>
         </div>
