--- a/vision.html
+++ b/vision.html
@@ -18,7 +18,6 @@
 	</head>
 
 	<body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -43,7 +42,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Missione circumlunare</a>
+                  <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
                   <a href="#">Volo a gravità zero</a>
@@ -103,22 +102,22 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Vision</a>
+                  <a href="vision.html">Vision</a>
                 </li>
                 <li>
-                  <a href="#">Storia</a>
+                  <a href="storia.html">Storia</a>
                 </li>
                 <li>
-                  <a href="#">Il Team</a>
+                  <a href="team.html">Il Team</a>
                 </li>
                 <li>
-                  <a href="#">Opportunità lavorative</a>
+                  <a href="opportunita.html">Opportunità lavorative</a>
                 </li>
               </ul>
             </li>
-            <!-- Contattaci -->
+            <!-- Contatti -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
@@ -126,18 +125,15 @@
                   <a href="scrivici.html">Scrivici</a>
                 </li>
                 <li>
-                  <a href="#">Dove trovarci</a>
+                  <a href="mappa.html">Dove trovarci</a>
                 </li>
               </ul>
             </li>
-            <!-- Ricerca -->
-            <li>
-              <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
-            </li>
             <!-- Login form -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
-                <span class="caret"></span>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                <span class="hidden-sm hidden-md hidden-lg"> Login</span>
               </a>
               <ul id="login-dp" class="dropdown-menu">
                 <li>
@@ -170,6 +166,13 @@
                 </li>
               </ul>
             </li>
+            <!-- Ricerca -->
+            <li>
+              <a href="ricercaglobale.html">
+                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                <span class="hidden-sm hidden-md hidden-lg"> Cerca nel sito</span>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -184,13 +187,13 @@
         <div class="panel-heading jumbotron">
           <h1>Visione aziendale</h1>
           <blockquote class="blockquote-reverse">
-              <p>There is only Passion.</p>
-              <p> Through Passion I gain Strength.</p>
-              <p>Through Strength I gain Power.</p>
-              <p>Through Power I gain Victory.</p>
-              <p>Through Victory my chains are Broken.</p>
-              <p>The Force shall free me.</p>
-              <footer>DOC, Shroom Space Industries CEO</footer>
+            <p>There is only Passion.</p>
+            <p> Through Passion I gain Strength.</p>
+            <p>Through Strength I gain Power.</p>
+            <p>Through Power I gain Victory.</p>
+            <p>Through Victory my chains are Broken.</p>
+            <p>The Force shall free me.</p>
+            <footer>DOC, Shroom Space Industries CEO</footer>
           </blockquote>
         </div>
         <div class="panel-body">
