--- a/carrello.html
+++ b/carrello.html
@@ -45,27 +45,27 @@
                   <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
-                  <a href="esperienza.html">Volo a gravità zero</a>
+                  <a href="#">Volo a gravità zero</a>
                 </li>
                 <li>
-                  <a href="esperienza.html">Addestramento da astronauta</a>
+                  <a href="#">Addestramento da astronauta</a>
                 </li>
                 <li>
-                  <a href="esperienza.html">Visita la stazione spaziale</a>
+                  <a href="#">Visita la stazione spaziale</a>
                 </li>
                 <li>
-                  <a href="esperienza.html">Assisti ad un lancio spaziale</a>
+                  <a href="#">Assisti ad un lancio spaziale</a>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Altre esperienze</li>
                 <li>
-                  <a href="esperienza.html">Assisti ad un lancio spaziale</a>
+                  <a href="#">Assisti ad un lancio spaziale</a>
                 </li>
                 <li>
-                  <a href="esperienza.html">Scopri le nostre tecnologie</a>
+                  <a href="#">Scopri le nostre tecnologie</a>
                 </li>
                 <li>
-                  <a href="esperienza.html">Sicurezza</a>
+                  <a href="#">Sicurezza</a>
                 </li>
               </ul>
             </li>
@@ -108,16 +108,16 @@
                   <a href="storia.html">Storia</a>
                 </li>
                 <li>
-                  <a href="#">Il Team</a>
+                  <a href="team.html">Il Team</a>
                 </li>
                 <li>
-                  <a href="#">Opportunità lavorative</a>
+                  <a href="opportunita.html">Opportunità lavorative</a>
                 </li>
               </ul>
             </li>
-            <!-- Contattaci -->
+            <!-- Contatti -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
@@ -125,18 +125,15 @@
                   <a href="scrivici.html">Scrivici</a>
                 </li>
                 <li>
-                  <a href="#">Dove trovarci</a>
+                  <a href="mappa.html">Dove trovarci</a>
                 </li>
               </ul>
             </li>
-            <!-- Ricerca -->
-            <li>
-              <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
-            </li>
             <!-- Login form -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
-                <span class="caret"></span>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                <span class="hidden-sm hidden-md hidden-lg"> Login</span>
               </a>
               <ul id="login-dp" class="dropdown-menu">
                 <li>
@@ -168,6 +165,13 @@
                   </div>
                 </li>
               </ul>
+            </li>
+            <!-- Ricerca -->
+            <li>
+              <a href="ricercaglobale.html">
+                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                <span class="hidden-sm hidden-md hidden-lg"> Cerca nel sito</span>
+              </a>
             </li>
           </ul>
         </div>
