--- a/indexlogged.html
+++ b/indexlogged.html
@@ -153,7 +153,10 @@
       </div>
     </nav>
 
-		<main>
+		<main class="container">
+
+      <hr>
+
 			<section id="myCarousel" class="carousel slide" data-ride="carousel">
 				<!-- Indicators -->
 				<ol class="carousel-indicators">
@@ -166,21 +169,12 @@
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
 						<img src="img/img1.jpg" alt="...">
-						<div class="carousel-caption">
-							<!-- niente -->
-						</div>
 					</div>
 					<div class="item">
 						<img src="img/img2.jpg" alt="...">
-						<div class="carousel-caption">
-							<!-- niente -->
-						</div>
 					</div>
 					<div class="item">
 						<img src="img/img3.jpg" alt="...">
-						<div class="carousel-caption">
-							<!-- niente -->
-						</div>
 					</div>
 				</div>
 			
@@ -201,14 +195,14 @@
 
       <hr>
 
-      <section class="container">
+      <section>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
         </div>
       </section>
-
+			
       <hr>
-
+      
       <section class="container">
         <div class="row">
           <div class="col-md-6">
@@ -217,15 +211,19 @@
                 <h1>News Recenti</h1>
               </div>
 
-              <div class="panel-body">
-                <h2>Subheading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                <h2>Subheading</h2>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-                <h2>Subheading</h2>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <div class="list-group">
+                <div class="list-group-item">
+                  <h2>Subheading</h2>
+                  <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+                </div>
+                <div class="list-group-item">
+                  <h2>Subheading</h2>
+                  <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+                </div>
+                <div class="list-group-item">
+                  <h2>Subheading</h2>
+                  <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                </div>
               </div>
             </div>
           </div>
@@ -236,15 +234,19 @@
                 <h1>Novità dal blog</h1>
               </div>
 
-              <div class="panel-body">
-                <h2>Subheading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                <h2>Subheading</h2>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-                <h2>Subheading</h2>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <div class="list-group">
+                <div class="list-group-item">
+                  <h2>Subheading</h2>
+                  <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+                </div>
+                <div class="list-group-item">
+                  <h2>Subheading</h2>
+                  <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+                </div>
+                <div class="list-group-item">
+                  <h2>Subheading</h2>
+                  <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                </div>
               </div>
             </div>
           </div>
