--- a/mappa.html
+++ b/mappa.html
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Shroom Space Ind.</a>
+          <a class="navbar-brand" href=".">Shroom Space Ind.</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -180,14 +180,13 @@
     </nav>
   
     <main class="container">
-
       <ol class="breadcrumb">
         <li><a href="index.html">Home</a></li>
         <li class="active">Dove trovarci</li>
       </ol>
 
       <div class="panel panel-default">
-        <header class="panel-heading well">
+        <header class="panel-heading">
           <h1>
             Dove trovarci?
           </h1>
@@ -195,13 +194,10 @@
         </header>
 
         <section class="panel-body">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9192.048856377149!2d-87.63926804638194!3d41.89624864861953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x391a5a350090350e!2sClark%2FDivision!5e0!3m2!1sit!2sit!4v1515862348157" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9192.048856377149!2d-87.63926804638194!3d41.89624864861953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x391a5a350090350e!2sClark%2FDivision!5e0!3m2!1sit!2sit!4v1515862348157" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </section>
       </div>
-
     </main>
-
-		
 
 		<footer class="footer">
 			<nav class="navbar-inverse">
