--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 	</head>
 
 	<body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -29,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Shroom Space Ind.</a>
+          <a class="navbar-brand" href=".">Shroom Space Ind.</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -229,7 +228,7 @@
 			
       <hr>
       
-      <section class="container">
+      <section>
         <div class="row">
           <div class="col-md-6">
             <div class="panel panel-default">
