--- a/indexlogged.html
+++ b/indexlogged.html
@@ -203,7 +203,7 @@
 			
       <hr>
       
-      <section class="container">
+      <section>
         <div class="row">
           <div class="col-md-6">
             <div class="panel panel-default">
