--- a/fotofiltrato.html
+++ b/fotofiltrato.html
@@ -43,6 +43,10 @@
 						</a>
 						<ul class="dropdown-menu">
 							<li>
+								<a href="esperienze.html">Catalogo completo</a>
+							</li>
+							<li role="separator" class="divider"></li>
+							<li>
 								<a href="esperienza.html">Missione circumlunare</a>
 							</li>
 							<li>
@@ -79,12 +83,12 @@
 						<a href="blog.html">Blog</a>
 					</li>
 					<!-- Multimedia -->
-					<li class="dropdown">
+					<li class="dropdown active">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
 							<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
-							<li>
+							<li class="active">
 								<a href="foto.html">Foto gallery</a>
 							</li>
 							<li>
@@ -203,7 +207,9 @@
 							</p>
 						</div>
 						<div class="col-xs-6 col-xs-offset-6 col-sm-3 col-sm-offset-0">
-							<button href="foto.html" class="btn btn-success btn-block">Elimina filtri</button>
+						<a href="foto.html">
+							<button href="#" class="btn btn-success btn-block">Elimina filtri</button>
+						</a>
 						</div>
 					</div>
 				</div>
