--- a/mappa.html
+++ b/mappa.html
@@ -43,6 +43,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <a href="esperienze.html">Catalogo completo</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
                   <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
@@ -125,7 +129,7 @@
                 <li>
                   <a href="scrivici.html">Scrivici</a>
                 </li>
-                <li>
+                <li class="active">
                   <a href="mappa.html">Dove trovarci</a>
                 </li>
               </ul>
