--- a/scrivici.html
+++ b/scrivici.html
@@ -47,6 +47,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <a href="esperienze.html">Catalogo completo</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
                   <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
@@ -121,12 +125,12 @@
               </ul>
             </li>
             <!-- Contatti -->
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li>
+                <li class="active">
                   <a href="scrivici.html">Scrivici</a>
                 </li>
                 <li>
