--- a/blog2.html
+++ b/blog2.html
@@ -42,6 +42,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <a href="esperienze.html">Catalogo completo</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
                   <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
@@ -74,7 +78,7 @@
               <a href="#about">News ed Eventi</a>
             </li>
             <!-- Blog -->
-            <li>
+            <li class="active">
               <a href="blog.html">Blog</a>
             </li>
             <!-- Multimedia -->
