--- a/esperienza_logged.html
+++ b/esperienza_logged.html
@@ -37,12 +37,16 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <!-- Esperienze -->
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <a href="esperienze.html">Catalogo completo</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li class="active">
                   <a href="#">Missione circumlunare</a>
                 </li>
                 <li>
@@ -130,10 +134,6 @@
                 </li>
               </ul>
             </li>
-            <!-- Ricerca -->
-            <li>
-              <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
-            </li>
             <!-- Utente -->
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Benvenuto, user!
@@ -147,6 +147,13 @@
                   <a href=".">Logout</a>
                 </li>
               </ul>
+            </li>
+            <!-- Ricerca -->
+            <li>
+              <a href="ricercaglobale.html">
+                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                <span class="hidden-sm hidden-md hidden-lg"> Cerca nel sito</span>
+              </a>
             </li>
           </ul>
         </div>
