--- a/foto1.html
+++ b/foto1.html
@@ -43,6 +43,10 @@
 						</a>
 						<ul class="dropdown-menu">
 							<li>
+								<a href="esperienze.html">Catalogo completo</a>
+							</li>
+							<li role="separator" class="divider"></li>
+							<li>
 								<a href="esperienza.html">Missione circumlunare</a>
 							</li>
 							<li>
@@ -79,12 +83,12 @@
 						<a href="blog.html">Blog</a>
 					</li>
 					<!-- Multimedia -->
-					<li class="dropdown">
+					<li class="dropdown active">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
 							<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
-							<li>
+							<li class="active">
 								<a href="foto.html">Foto gallery</a>
 							</li>
 							<li>
