--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <a href="esperienze.html">Catalogo completo</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
                   <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
@@ -204,7 +208,7 @@
 				</div>
 			
 				<div class="carousel-caption">
-					<p><a class="btn btn-lg btn-primary" href="#" role="button">Vai alle esperienze</a></p>
+					<p><a class="btn btn-lg btn-primary" href="." role="button">Vai alle esperienze</a></p>
 				</div>
 
 				<!-- Controls -->
