--- a/indexlogged.html
+++ b/indexlogged.html
@@ -43,6 +43,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <a href="esperienze.html">Catalogo completo</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
                   <a href="#">Missione circumlunare</a>
                 </li>
                 <li>
@@ -130,10 +134,6 @@
                 </li>
               </ul>
             </li>
-            <!-- Ricerca -->
-            <li>
-              <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
-            </li>
             <!-- Utente -->
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Benvenuto, user!
@@ -147,6 +147,13 @@
                   <a href=".">Logout</a>
                 </li>
               </ul>
+            </li>
+            <!-- Ricerca -->
+            <li>
+              <a href="ricercaglobale.html">
+                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                <span class="hidden-sm hidden-md hidden-lg"> Cerca nel sito</span>
+              </a>
             </li>
           </ul>
         </div>
@@ -179,7 +186,7 @@
 				</div>
 			
 				<div class="carousel-caption">
-					<p><a class="btn btn-lg btn-primary" href="#" role="button">Vai alle esperienze</a></p>
+					<p><a class="btn btn-lg btn-primary" href="indexlogged.html" role="button">Vai alle esperienze</a></p>
 				</div>
 
 				<!-- Controls -->
