--- a/partners.html
+++ b/partners.html
@@ -43,6 +43,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <a href="esperienze.html">Catalogo completo</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
                   <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
@@ -93,7 +97,7 @@
               </ul>
             </li>
             <!-- Partners -->
-            <li>
+            <li class="active">
               <a href="partners.html">Partners</a>
             </li>
             <!-- Chi siamo -->
