--- a/ricercaglobale.html
+++ b/ricercaglobale.html
@@ -42,6 +42,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <a href="esperienze.html">Catalogo completo</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
                   <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
@@ -167,7 +171,7 @@
               </ul>
             </li>
             <!-- Ricerca -->
-            <li>
+            <li class="active">
               <a href="ricercaglobale.html">
                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                 <span class="hidden-sm hidden-md hidden-lg"> Cerca nel sito</span>
