--- a/storia.html
+++ b/storia.html
@@ -43,6 +43,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <a href="esperienze.html">Catalogo completo</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
                   <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
@@ -97,7 +101,7 @@
               <a href="partners.html">Partners</a>
             </li>
             <!-- Chi siamo -->
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chi siamo
                 <span class="caret"></span>
               </a>
@@ -105,7 +109,7 @@
                 <li>
                   <a href="vision.html">Vision</a>
                 </li>
-                <li>
+                <li class="active">
                   <a href="storia.html">Storia</a>
                 </li>
                 <li>
