--- a/user.html
+++ b/user.html
@@ -43,6 +43,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <a href="esperienze.html">Catalogo completo</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
                   <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
@@ -130,40 +134,17 @@
                 </li>
               </ul>
             </li>
-            <!-- Login form -->
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                <span class="hidden-sm hidden-md hidden-lg"> Login</span>
+            <!-- Utente -->
+            <li class="dropdown active">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Benvenuto, user!
+                <span class="caret"></span>
               </a>
-              <ul id="login-dp" class="dropdown-menu">
+              <ul class="dropdown-menu">
+                <li class="active">
+                  <a href="user.html">Profilo utente</a>
+                </li>
                 <li>
-                  <div class="row">
-                    <form class="navbar-form" role="form" method="get" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
-                      <div class="form-group">
-                        <label class="sr-only" for="loginEmail">Indirizzo email</label>
-                        <input type="email" class="form-control" id="loginEmail" placeholder="Indirizzo email" required>
-                      </div>
-                      <div class="form-group">
-                        <label class="sr-only" for="loginPassword">Password</label>
-                        <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
-                        <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
-                      </div>
-                      <div>
-                        <label class="sr-only" for="loginSubmit">Indirizzo email</label>
-                        <input type="submit" class="btn btn-primary btn-block" id="loginSubmit" value="Vai!">
-                      </div>
-                      <hr>
-                      <div class="checkbox">
-                        <label>
-                          <input type="checkbox"> Resta collegato
-                        </label>
-                      </div>
-                    </form>
-                  </div>
-                  <div class="bottom text-center">
-                    Nuovo? <a href="registrazione.html"><b>Registrati!</b></a>
-                  </div>
+                  <a href=".">Logout</a>
                 </li>
               </ul>
             </li>
