--- a/vision.html
+++ b/vision.html
@@ -42,6 +42,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <a href="esperienze.html">Catalogo completo</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
                   <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
@@ -96,12 +100,12 @@
               <a href="partners.html">Partners</a>
             </li>
             <!-- Chi siamo -->
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chi siamo
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li>
+                <li class="active">
                   <a href="vision.html">Vision</a>
                 </li>
                 <li>
