--- a/template.html
+++ b/template.html
@@ -196,11 +196,9 @@
           <p class="lead">Sottotitolo</p>
         </header>
         
-        <div class="panel-body">
-
+        <section class="panel-body">
 					<!-- CONTENUTO PAGINA -->
-					
-        </div>
+        </section>
       </div>
     </main>
 
