--- a/scrivici.html
+++ b/scrivici.html
@@ -96,7 +96,7 @@
                   <a href="foto.html">Foto gallery</a>
                 </li>
                 <li>
-                  <a href="#">Video gallery</a>
+                  <a href="video.html">Video gallery</a>
                 </li>
               </ul>
             </li>
