--- a/video.html
+++ b/video.html
@@ -88,11 +88,11 @@
 							<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
-							<li class="active">
+							<li>
 								<a href="foto.html">Foto gallery</a>
 							</li>
-							<li>
-								<a href="#">Video gallery</a>
+							<li class="active">
+								<a href="video.html">Video gallery</a>
 							</li>
 						</ul>
 					</li>
