--- a/blog2.html
+++ b/blog2.html
@@ -91,7 +91,7 @@
                   <a href="foto.html">Foto gallery</a>
                 </li>
                 <li>
-                  <a href="#">Video gallery</a>
+                  <a href="video.html">Video gallery</a>
                 </li>
               </ul>
             </li>
