--- a/foto1.html
+++ b/foto1.html
@@ -92,7 +92,7 @@
 								<a href="foto.html">Foto gallery</a>
 							</li>
 							<li>
-								<a href="#">Video gallery</a>
+								<a href="video.html">Video gallery</a>
 							</li>
 						</ul>
 					</li>
